--- a/public/test.html
+++ b/public/test.html
@@ -8,11 +8,6 @@
   <body>
     <div id="mocha"></div>
     <script src="js/test.js"></script>
-    <script>mocha.setup('bdd')</script>
-    <script>
-      mocha.checkLeaks();
-      mocha.globals(['jQuery']);
-      mocha.run();
-    </script>
+    <script>mocha.run();</script>
   </body>
 </html>
