--- a/public/test.html
+++ b/public/test.html
@@ -8,6 +8,13 @@
   <body>
     <div id="mocha"></div>
     <script src="js/test.js"></script>
-    <script>mocha.run();</script>
+    <script>
+      if (window.mochaPhantomJS) {
+        mochaPhantomJS.run();
+      }
+      else {
+        mocha.run();
+      }
+    </script>
   </body>
 </html>
