--- a/public/test.html
+++ b/public/test.html
@@ -9,12 +9,8 @@
     <div id="mocha"></div>
     <script src="js/test.js"></script>
     <script>
-      if (window.mochaPhantomJS) {
-        mochaPhantomJS.run();
-      }
-      else {
-        mocha.run();
-      }
+      if (window.mochaPhantomJS) { mochaPhantomJS.run(); }
+      else { mocha.run(); }
     </script>
   </body>
 </html>
